--- a/natelabs-drag-drop-directive/src/app/app.component.html
+++ b/natelabs-drag-drop-directive/src/app/app.component.html
@@ -6,7 +6,7 @@
   (dragEnd)="onDragEnd($event)"
 >Box 1</div>
 
-<div class="box" appDraggable
+<div class="box" appDraggableRx
   (dragStart)="onDragStart($event)"
   (dragMove)="onDragMove($event)"
   (dragEnd)="onDragEnd($event)"
