fixing event propagation bug in nested movable elements

--- a/natelabs-drag-drop-directive/src/app/app.component.html
+++ b/natelabs-drag-drop-directive/src/app/app.component.html
@@ -10,5 +10,10 @@
 
 <h1>Part 2 - movable</h1>
 <div class="box" appMovable>
-  Movable
+  <div class="box" appMovable>
+    Movable
+  </div>
+  <div class="box" appMovable [appMovableReset]="true">
+    Movable
+  </div>
 </div>
