adding movable area directive. it keeps any movable elements bound within it

--- a/natelabs-drag-drop-directive/src/app/app.component.html
+++ b/natelabs-drag-drop-directive/src/app/app.component.html
@@ -17,3 +17,12 @@
     Movable
   </div>
 </div>
+
+<h1>Part 3 - movable area</h1>
+<div class="area" appMovableArea>
+  <div class="box" appMovable *ngFor="let trapped of trappedBoxes">
+    {{trapped}}
+  </div>
+</div>
+
+<button (click)="add()">Add</button>
